--- a/public/tbt-hussian.html
+++ b/public/tbt-hussian.html
@@ -183,7 +183,7 @@ If you no longer wish to receive this type of email from #BlowX, you can unsubsc
                 style="width: 28px !important ; height: 28px !important;"
               />
             </a>
-            <a href="https://t.me/BlowX_Official" title="LinkedIn" target="_blank" style="padding-right: 40px;">
+            <a href="https://t.me/BlowX_Officia1" title="LinkedIn" target="_blank" style="padding-right: 40px;">
               <img
                 src="https://res.cloudinary.com/www-daniekeys-com/image/upload/v1690392079/telegr_ptuny4.png"
                 alt="LinkedIn"
